<resources>
    <string name="app_name">SOFRTK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registerButton">Register</string>
    <string name="loginTxt">Login</string>
    <string name="loginButton">Login</string>
    <string name="registerTxt">Register</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="enter_your_e_mail">Enter Your E-mail</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="or">OR</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="default_web_client_id">550153787297-30tp2t4tfc8qejbegabi366ppe9ogbrc.apps.googleusercontent.com</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_area">Meal Area</string>
    <string name="my_plan">My Plan</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="plan_meal_name">Plan Meal Name</string>
    <string name="country_name">Country Name</string>
    <string name="ingredient">ingredient</string>
    <string name="welcome_back">"Welcome back: "</string>
    <string name="error_getting_email">Error getting email</string>
    <string name="error_checking_login_status">Error checking login status</string>
    <string name="invalid_email_format">Invalid Email Format</string>
    <string name="this_field_cannot_be_less_than">"This Field Cannot Be Less Than "</string>
    <string name="characters">" Characters"</string>
    <string name="password_must_be_the_same">Password Must Be The Same</string>
    <string name="this_field_cannot_be_empty">This Field Cannot Be Empty</string>
    <string name="welcome">"Welcome! "</string>
    <string name="welcome_guest">Welcome! Guest</string>
</resources>